@@ -1,6 +1,6 @@
 {
-  "count": 42,
-  "uniques": 13,
+  "count": 50,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2022-05-06T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-05-19T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
+      "count": 8,
+      "uniques": 6
     }
   ]
 }
