@@ -1,3 +1,10 @@
+2022-05-20T08:19:39Z:
+* notice: last 14d: unq all: 16 50
+* notice: prev accum: outdated-unq outdated-all / unq all: 143 265 / 169 307
+* notice: next accum: outdated-unq outdated-all / unq all: 143 265 / 175 315
+* notice: prev exec diff / last date diff / accum: unq all: +6 +8 -0 -0 / +6 +8 -0 -0 / 6 8
+* notice: changed dates: [2022-05-20]
+
 2022-05-19T16:41:16Z:
 * notice: last 14d: unq all: 13 42
 * notice: prev accum: outdated-unq outdated-all / unq all: 142 264 / 169 306
